# ShoppingmallWeb

./: .gitignore  README.MD  deploy_note.MD  nginx cmd.txt  progress.MD  requirements.txt  쇼핑몰 클론코딩.url  장고 timezone문제.url
Shoppingmall/: db.sqlite3  manage.py  manageprod.py  pyproject.toml  requirements.txt
Shoppingmall/Shoppingmall/: asgi.py  config.txt  settings.py  settingsprod.py  test.py  urls.py  wsgi.py
Shoppingmall/environment_3_8_2/: apidjackets.nginx.conf  gunicorn_start
Shoppingmall/environment_settingfile/: apiserver.zlzlelzl.tk.nginx.conf  djackets.conf  gunicorn_start  zlzlelzl.tk.nginx.conf
Shoppingmall/order/: models.py  views.py
Shoppingmall/order/migrations/: 0001_initial.py
Shoppingmall/product/: models.py  serializers.py  urls.py  views.py
Shoppingmall/product/migrations/: 0001_initial.py  0002_product.py
Shoppingmall/shoppingmall_vue/: README.md  package-lock.json  package.json
Shoppingmall/shoppingmall_vue/public/: index.html
Shoppingmall/shoppingmall_vue/src/: App.vue  main.js
Shoppingmall/shoppingmall_vue/src/components/: ProductBox.vue
Shoppingmall/shoppingmall_vue/src/router/: index.js
Shoppingmall/shoppingmall_vue/src/store/: index.js
Shoppingmall/shoppingmall_vue/src/views/: Category.vue  Home.vue  Product.vue  Search.vue
Shoppingmall/templates/: index.html
Shoppingmall/testpage/: models.py  views.py
