[tool.poetry]
name = "Shoppingmall"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.7"
django-rest-framework = "0.1.0"
django-cors-headers = "3.8.0"
djoser = "2.1.0"
Pillow = "8.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
